--- a/minio/src/main/resources/application.properties
+++ b/minio/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 
+# Minio Host
+spring.minio.url=https://play.min.io
+# Minio Bucket name for your application
+spring.minio.bucket=00000qweqwe
+# Minio access key (login)
+spring.minio.access-key=Q3AM3UQ867SPQQA43P2F
+# Minio secret key (password)
+spring.minio.secret-key=zuf+tfteSlswRu7BJ86wekitnifILbZam1KYY3TG
